--- a/invictus/vercel.json
+++ b/invictus/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@now/python"
+      "use": "@now/python",
+      "config": { "maxLambdaSize": "1024mb", "pythonVersion": "3.9" }
     }
   ],
   "routes": [
