--- a/invictus/vercel.json
+++ b/invictus/vercel.json
@@ -3,8 +3,8 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@now/python",
-      "config": { "maxLambdaSize": "1024mb", "pythonVersion": "3.9" }
+      "use": "python 3.10.10",
+      "config": { "maxLambdaSize": "1024mb", "pythonVersion": "3.10.10" }
     }
   ],
   "routes": [
