--- a/invictus/vercel.json
+++ b/invictus/vercel.json
@@ -1,14 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "python 3.9",
-      "config": { "maxLambdaSize": "1024mb", "pythonVersion": "3.9" }
+  "functions": {
+    "main": {
+      "runtime": "vercel-python@3.10.10",
+      "memory": 128
     }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "main.py" }
-  ]
+  }
 }
